Finally z-index is workign on the home page, and positioned the home banner contetn correctly, however having trouble with the footer being pushed up on screend sizes and rendering stragely.

--- a/src/pages/landing/style.scss
+++ b/src/pages/landing/style.scss
@@ -1,4 +1,5 @@
 .home-main-banner {
+    width: 100%; 
     position: relative; 
 }
 .home-main-banner img {
@@ -6,16 +7,27 @@
     top: 0; 
     left: 0; 
     width: 100%; 
+    max-width: 100%; 
     height: auto; 
-    z-index: 1;
+    z-index: 0;
 }
-.home-main-banner h4, .home-main-banner h5 {
-    position: absolute; 
-    top: 100px; 
-    left: 100px; 
-    width: 100%; 
-    z-index: 100;
-    padding: 3rem; 
+.main-banner-content {
+    position: relative; 
+    top: 25px; 
+    left: 25px; 
+    width: 100%;
+    z-index: 1;
+    padding: 1rem 1rem; 
+}
+.main-banner-content h4, .main-banner-content h5 {
+    padding: 1rem 0;
+}
+.main-banner-content h4 {
+    padding-right: 7.5rem; 
+    text-transform: uppercase;
+}
+.main-banner-content h5 {
+    padding-right: 7.5rem; 
 }
 
 /*
